CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(RPI-GPRS-CLIENT CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fdiagnostics-color=always -fPIE -std=c++17 -Wall -O2")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -fPIE")
SET(BINDIR ${CMAKE_SOURCE_DIR}/bin)

ADD_DEFINITIONS("-DENABLE_COLORS")

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)
